# waze-churn-analysis

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: eda.ipynb  uaidata_theme.py  utils.py
reports/: 20260416_v001_marp_slides.html  20260416_v001_marp_slides.marp.md  20260416_v001_slides.html
