[project]
name = "waze-churn-analysis"
version = "0.1.0"
description = "Churn analysis on Waze data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.0",
    "seaborn>=0.13",
    "scipy>=1.10",
    "lxml>=4.0",
    "tabulate>=0.9",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ruff>=0.4",
]


[tool.ruff.lint]
select = ["I"]  # enable isort rules

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["utils"]  # tells ruff 'utils' is local, not third-party
